--- a/django-backend/Dockerfile
+++ b/django-backend/Dockerfile
@@ -1,14 +1,27 @@
-FROM python:3.11-alpine
+FROM mirror.gcr.io/library/python:3.11-alpine
+
+# Устанавливаем системные зависимости
+RUN apk add --no-cache \
+    gcc \
+    musl-dev \
+    postgresql-dev \
+    && rm -rf /var/cache/apk/*
+
 WORKDIR /app
-RUN apk update
-RUN apk upgrade
-COPY ./requirements.txt ./
-RUN pip install --upgrade pip
-RUN pip install -r requirements.txt
-COPY ./src ./src
-# COPY ./robots.txt ./robots.txt
 
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
+# Копируем requirements.txt для кеширования слоя pip
+COPY requirements.txt .
 
-CMD gunicorn -w 3 --chdir ./src proj.wsgi --bind 0.0.0.0:8000
+# Устанавливаем Python зависимости
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Копируем исходный код
+COPY src/ ./src/
+
+# Переменные окружения
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1 \
+    PYTHONPATH=/app/src
+
+# Запускаем Gunicorn
+CMD ["gunicorn", "-w", "3", "--chdir", "./src", "proj.wsgi:application", "--bind", "0.0.0.0:8000"]
