Добавлены скрипты для переключения режимов и обновлена инструкция HTTPS
- Создан switch_mode.sh - интерактивное меню для переключения режимов
- Создан switch_to_production.sh - автоматическое переключение в продакшен
- Создан switch_to_production.sh - автоматическое переключение в разработку
- Обновлен HTTPS_SETUP.md с информацией о скриптах
- Исправлена конфигурация nginx для localhost
- Обновлен docker-compose.yml для локальной разработки

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,9 +2,8 @@ upstream innerdjango {
     server django-backend:8000;
 }
 
-
 server {
-    listen 80; # port exposed to outside world. Needs to be opened in docker-compose.yml
+    listen 80;
     server_name localhost 127.0.0.1 queen-cosmo.ru www.queen-cosmo.ru;
 
     location / {
@@ -30,10 +29,4 @@ server {
     location /favicon.svg {
         alias /var/www/favicon.svg;
     }
-}  
-# HTTPS секция отключена для localhost
-# server {
-#     listen 443 ssl;
-#     server_name queen-cosmo.ru;
-#     # ... SSL настройки
-# }
+}
