--- a/.gitignore
+++ b/.gitignore
@@ -81,7 +81,17 @@ target/
 # IPython
 profile_default/
 ipython_config.py
+
+# КРИТИЧЕСКИ ВАЖНО: Конфиденциальные файлы
 locals_vars.py
+*.env
+.env
+.env.local
+.env.production
+.env.development
+.pg-env
+postgresql-db/.pg-env
+
 # pyenv
 #   For a library or package, you might want to ignore these files since the code is
 #   intended to run in multiple environments; otherwise, check them in:
@@ -112,8 +122,9 @@ locals_vars.py
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
 
-.pg-env
+# База данных и кеш
 persistentdata/*
+!persistentdata/.gitkeep
 
 # Celery stuff
 celerybeat-schedule
@@ -123,7 +134,6 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
 .venv
 env/
 venv/
@@ -161,3 +171,16 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Дополнительные файлы безопасности
+*.key
+*.pem
+*.crt
+*.p12
+*.pfx
+secrets.json
+secrets.yaml
+secrets.yml
+config.json
+config.yaml
+config.yml
